# NeuralNetworkCPlusPlus

./: .gitignore  CMakeLists.txt  README.md  backpropagation.tex  check.pl  temp.nwk
MNIST/: README.txt
latex/: backpropagation.tex  crossentropyderivative.tex  softmaxderivative.tex
src/: activations.h  bitmapfileheader.h  bitmapinfoheader.h  image.cpp  image.h  imagedata.cpp  imagedata.h  imageloader.cpp  imageloader.h  logger.cpp  logger.h  main.cpp  matrix.h  network.cpp  network.h  networkmain.cpp  neuralnetwork.cpp  neuralnetwork.h  oldnetwork.cpp  oldnetwork.h  test  test.cpp  threadpool.h
